<resources>

    <string name="app_name">任务管理</string>

     <string name="title_today_task">今日安排</string>
     <string name="title_add_task">添加任务</string>
     <string name="title_show_task">查看任务</string>
     <string name="title_edit_task">编辑任务</string>
     <string name="title_history_task">历史任务</string>
     <string name="title_setting">设置</string>
     <string name="title_save">保存</string>
     <string name="title_task_desc">详情</string>
    
    <string name="task_name">任务名:</string>
    <string name="task_start_time">开始时间:</string>
    <string name="task_end_time">截止时间:</string>
    <string name="task_note">备注:</string>
    <string name="task_notification">通知栏显示:</string>
    <string name="task_state">状态:</string>
    
    <string name="message_task_add_error">添加失败，请检查格式是否正确</string>
    <string name="message_task_add_success">添加成功</string>
    <string name="message_task_delete_success">删除成功</string>
    <string name="message_task_delete_error">删除失败</string>
    
    
	<string name="pull_to_refresh">下拉可以刷新</string>
	<string name="release_to_refresh">释放立即刷新</string>
	<string name="refreshing">正在刷新…</string>
	<string name="not_updated_yet">暂未更新过</string>
	<string name="updated_at">上次更新于%1$s前</string>
	<string name="updated_just_now">刚刚更新</string>
	<string name="time_error">时间有问题</string>
</resources>
