<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/sub_header" />

    <RelativeLayout
        style="@style/txt_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_task_name"
            style="@style/txt_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_name"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/txt_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_toRightOf="@id/tv_task_name" />
    </RelativeLayout>

    <RelativeLayout
        style="@style/txt_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_task_start_time"
            style="@style/txt_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_start_time"
            android:textSize="15sp" />

        <TimePicker android:id="@+id/tp_task_start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_toRightOf="@id/tv_task_start_time"
            android:visibility="gone"/>
         <EditText
            android:id="@+id/txt_task_start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_toRightOf="@id/tv_task_start_time" /> 
    </RelativeLayout>

    <RelativeLayout
        style="@style/txt_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView style="@style/txt_row"
            android:id="@+id/tv_task_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_end_time"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/txt_task_end_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_toRightOf="@id/tv_task_end_time" />
    </RelativeLayout>

    <RelativeLayout
        style="@style/txt_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_task_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_note"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/txt_task_note"
            style="@style/txt_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_toRightOf="@id/tv_task_note"
            android:lines="5" />
    </RelativeLayout>

    <RelativeLayout
        style="@style/txt_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/txt"
            android:id="@+id/tv_task_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_notification"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/cb_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

</LinearLayout>